--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@auth0/angular-jwt": "^5.2.0",
     "apexcharts": "^3.48.0",
     "bootstrap": "^5.3.3",
+    "jwt-decode": "^4.0.0",
     "ng-apexcharts": "^1.10.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.8",
